# govcon-compliance-engine

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0000_baseline_empty.py  0001_core_ledger_audit_trail.py  0002_seed_regulatory_thresholds.py  0003_phase_2_tables.py  0004_phase_3_cas_consistency_tables.py  0005_phase_4_rate_engine_tables.py  0006_phase_5_billing_and_schedule_tables.py  0007_phase_8_tina_sweep_tables.py  0008_phase_9_rea_cda_eichleay_tables.py  0009_phase_11_monitoring_and_audit_response_.py  0010_phase_12_standard_costing_tables.py  0011_v11_gl_accounts_is_labor.py  0012_exec_comp_cap_seed.py  0013_stress_test_fixes_is_compensation_.py  0014_threshold_status_carry_forward.py  0015_decision_tables_rules_as_data.py  0016_regulatory_suggestions.py  0017_postgres_enforcement.py
docs/: AI_LAYER.md  DEPLOY.md  POSTGRES.md  index.html
scripts/: demo.py
src/govcon/: __init__.py  workspaces.py
src/govcon/ai/: __init__.py  client.py  cost.py  dispatch.py  errors.py  gate.py  grounding.py  loop.py  patterns.py  prompts.py  registry.py
src/govcon/api/: __init__.py  app.py  auth.py  hardening.py
src/govcon/cli/: main.py
src/govcon/core/: decimal_config.py  errors.py  identity.py  logging.py
src/govcon/db/: audit.py  base.py  engine.py  guards.py  types.py
src/govcon/education/: __init__.py  glossary.py  scenarios.py
src/govcon/models/: __init__.py  audit_trail.py  billing.py  claims.py  contracts.py  decision_tables.py  enums.py  exceptions_ref.py  ledger.py  monitoring.py  periods.py  pools.py  practices.py  rate_runs.py  reference.py  regulatory.py  (+3 more)
tests/: auth_helpers.py  conftest.py  test_allowability_vector.py  test_api.py  test_api_auth.py  test_api_hardening.py  test_append_only.py  test_audit_trail.py  test_base_derivation.py  test_carry_forward.py  test_cas_consistency.py  test_cas_tina.py  test_closed_period.py  test_decimal_roundtrip.py  test_decision_engine.py  test_decision_table_seed.py  test_direct_indirect_exclusion.py  test_education.py  test_eichleay.py  test_excel_and_statement.py  test_exec_comp.py  test_export_reverify.py  test_ice_schedules.py  test_identity_workspaces.py  test_immutability.py  test_pbr_audit_response.py  test_period_close.py  test_postgres_concurrency.py  test_pricing_analysis.py  test_rate_engine.py  test_rea_cda.py  test_regulation_watch.py  test_rules_parity.py  test_sf1408.py  test_smoke.py  test_standard_costing.py  test_stress_regressions.py  test_threshold_seed.py  test_tina_sweep.py  test_travel_split.py  (+1 more)
tests/ai/: conftest.py  test_ai_dispatch.py  test_ai_endpoint.py  test_ai_gate.py  test_ai_grounding.py  test_ai_hardening.py  test_ai_live_smoke.py  test_draft_rule.py  test_narrative.py  test_real_data_mode.py  test_streaming.py  test_tutor.py
tests/fixtures/: synthetic_data.py
tests/frontend/: conftest.py  test_workbench.py
tests/oracles/: legacy_cas_tina.py
(+31 files in other folders)
