[project]
name = "govcon-engine"
version = "0.1.0"
description = "GovCon cost-accounting compliance engine (synthetic data only; not a certified accounting system)"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2",
    "structlog>=24",
    "typer>=0.12",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = ["pytest>=8"]

[project.scripts]
govcon = "govcon.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/govcon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
