[project]
name = "govcon-engine"
version = "0.1.0"
description = "GovCon cost-accounting compliance engine (synthetic data only; not a certified accounting system)"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2",
    "structlog>=24",
    "typer>=0.12",
    "openpyxl>=3.1.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
# The engine/session layer is dialect-clean; what is NOT yet ported to
# Postgres is the trigger layer (21 SQLite triggers -> plpgsql) and the
# audit-chain advisory lock — migrations refuse to run on a non-SQLite URL
# until that port is done AND verified against a live server. Plan:
# docs/POSTGRES.md.
postgres = ["psycopg[binary]>=3.2"]
# The AI interaction layer (grounded assistant) — optional so the core engine
# installs and tests without it. Needs an ANTHROPIC_API_KEY at runtime.
ai = ["anthropic>=0.49"]
# Browser tests (Playwright) — optional so the core suite runs without a
# browser; the frontend test dir is skipped unless this extra is installed.
frontend = ["pytest-playwright>=0.5", "uvicorn>=0.30"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "httpx>=0.27"]

[project.scripts]
govcon = "govcon.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/govcon"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
    "E501",   # line length is advisory here; SafeNumeric comments run long
    "B008",   # Typer's `= typer.Option(...)` in defaults is the idiomatic pattern
    "E741",   # ICE Schedule enum members really are named I and O (FAR schedule letters)
    "UP042",  # str+Enum is deliberate (JSON-serializable .value); StrEnum migration out of scope
]

[tool.ruff.lint.per-file-ignores]
# Tests: forward-ref annotations on fixture builders (class imported in-body),
# throwaway locals in worked-example setups, and zip() over equal-length
# seed/db row lists are acceptable in test code.
"tests/*" = ["F821", "F841", "B905"]
